--- a/Caddyfile
+++ b/Caddyfile
@@ -6,3 +6,12 @@ http://pgp.ustc.edu.cn:11371, http://pgp.ustc.edu.cn, https://pgp.ustc.edu.cn {
   }
   tls zsj950618@gmail.com
 }
+
+http://sks.ustclug.org:11371, http://sks.ustclug.org {
+  bind 202.38.95.91 2001:da8:d800:95::91
+  root /var/lib/sks/web/
+  status 404 /
+  errors {
+    404 ustclug-org-404.html
+  }
+}
