--- a/Caddyfile
+++ b/Caddyfile
@@ -12,14 +12,14 @@ http://keys.gnupg.net:11371 {
   tls zsj950618@gmail.com
 }
 
-http://sks.ustclug.org,
-https://sks.ustclug.org,
-http://sks.ustclug.org:11371 {
+:80,
+:443,
+:11371 {
   bind 202.38.95.91 2001:da8:d800:95::91
   root /var/lib/sks/web/
   status 404 /
   errors {
-    404 ustclug-org-404.html
+    404 others-404.html
   }
   tls self_signed
 }
