--- a/Caddyfile
+++ b/Caddyfile
@@ -6,6 +6,9 @@ http://*.pool.sks-keyservers.net:11371,
 http://keys.gnupg.net:11371 {
   bind 202.38.95.91 2001:da8:d800:95::91
   root /var/lib/sks/web/
+  gzip {
+    ext .html .ico
+  }
   proxy /pks/ http://127.0.0.1:11371/ {
     header_downstream Via "{proto} {hostonly}:11371 (Caddy)"
   }
