--- a/Caddyfile
+++ b/Caddyfile
@@ -13,7 +13,7 @@ http://keys.gnupg.net:11371 {
     header_downstream Via "{proto} {hostonly}:11371 (Caddy)"
   }
   tls zsj950618@gmail.com
-  log stdout
+  log / stdout "[Caddy:{host}] {combined}"
 }
 
 http://sks.ustclug.org,
@@ -26,5 +26,5 @@ http://sks.ustclug.org:11371 {
     404 others-404.html
   }
   tls self_signed
-  log stdout
+  log / stdout "[Caddy:{host}] {combined}"
 }
